@@ -1,10 +1,15 @@
- * $Id: ChangeLog,v 1.4133 2005/05/23 16:04:49 lf_sfnet Exp $
+ * $Id: ChangeLog,v 1.4134 2005/05/24 21:05:38 ronpinkas Exp $
 
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-05-24 18:10 UTC-0300 Luiz Rafael Culik<culikr at uol.com.br>
+  * contrib/libmisc/dates2.c
+  * source/ct/datetime.c
+    ! Moved WOM function from dates2.c of libmisc to datetime.c of ct.lib
 
 2005-05-24 14:04 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
   * source/vm/classes.c
